[package]
name = "network_spy_proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "network_spy_proxy"
crate-type = ["cdylib"]

[dependencies]
hudsucker = { path = "./hudsucker", features = ["openssl-ca", "rustls-client"] }
bstr = "1.0.0"
futures = "0.3.11"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version = "0.1.3", features = ["client-legacy", "server", "http1"] }
thiserror = "1.0.30"
tokio = { version = "1.24.2", features = ["macros", "rt"] }
tokio-graceful = "0.1.6"
tokio-rustls = "0.25.0"
tokio-tungstenite = "0.21.0"
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = "0.3.15"
rustls-pemfile = "1.0.1"
serde_json = "1.0.120"
bytes = "1.6.1"
async-trait = "0.1.81"

[build-dependencies]
cc = "1.0"
