[package]
name = "network_spy_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hudsucker = { path = "./hudsucker", features = ["openssl-ca", "rustls-client"] }
bstr = "1.0.0"
futures = "0.3.11"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version = "0.1.3", features = ["client-legacy", "server", "http1"] }
thiserror = "1.0.30"
tokio = { version = "1.24.2", features = ["macros", "rt", "rt-multi-thread"] }
tokio-graceful = "0.1.6"
tokio-rustls = "0.25.0"
tokio-tungstenite = "0.21.0"
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = "0.3.15"
rustls-pemfile = "1.0.1"
bytes = "1.6.1"

[build-dependencies]
cc = "1.0"
